<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DF36677E"
    tools:context=".MainActivity"
    app:layoutDescription="@xml/activity_main_scene">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/image_container"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/profile_image_ifv"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="248dp"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/person"
        app:layout_constraintEnd_toEndOf="@id/image_container"
        app:layout_constraintStart_toEndOf="@+id/back_arrow_iv"
        app:layout_constraintTop_toTopOf="@id/image_container"
        app:layout_constraintBottom_toBottomOf="@id/image_container"
        app:roundPercent="1.0"/>

    <ImageView
        android:id="@+id/back_arrow_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/arrow_back_24"
        app:layout_constraintStart_toStartOf="@id/image_container"
        app:layout_constraintTop_toTopOf="@id/image_container" />

    <TextView
        android:id="@+id/name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="Narges Nagy"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/profile_image_ifv"
        app:layout_constraintTop_toTopOf="@id/image_container" />

    <TextView
        android:id="@+id/status_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="online"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/name_tv"
        app:layout_constraintTop_toBottomOf="@+id/name_tv" />

    <ImageView
        android:id="@+id/qr_imv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/qr_code_24"
        app:layout_constraintStart_toEndOf="@+id/name_tv"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/search_imv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:src="@drawable/baseline_search_24"
        app:layout_constraintStart_toEndOf="@+id/qr_imv"
        app:layout_constraintTop_toTopOf="@+id/qr_imv" />

    <ImageView
        android:id="@+id/more_imv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/more_vert_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/search_imv"
        app:layout_constraintTop_toTopOf="@+id/search_imv" />


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:scrollbars="none"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/image_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/account_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:fontFamily="sans-serif-medium"
                android:text="Account"
                android:textColor="@color/blue"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/phone_number_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="0101010101010"
                android:textColor="@color/black500"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/change_phone_number_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="click if you want to change phone number"
                android:textColor="@color/black300"
                android:textSize="14sp" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="16dp"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/user_name_value_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/username_value_tv"
                android:textColor="@color/black500"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/user_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/user_name"
                android:textColor="@color/black300"
                android:textSize="14sp" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="16dp"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/brief_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/brief"
                android:textColor="@color/black500"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/add_brief_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/add_brief_tv"
                android:textColor="@color/black300"
                android:textSize="14sp" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:layout_marginVertical="16dp" />

            <TextView
                android:id="@+id/settings_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/settings_tv"
                android:textColor="@color/blue"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/chat_settings_tv"
                style="@style/settings_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Chat Settings"
                app:drawableStartCompat="@drawable/chat24"
                app:drawableTint="@color/black300" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="16dp"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/privacy_tv"
                style="@style/settings_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_and_security_tv"
                app:drawableStartCompat="@drawable/https_24"
                app:drawableTint="@color/black300" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="16dp"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/notification_tv"
                style="@style/settings_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification_and_sounds_tv"
                app:drawableStartCompat="@drawable/notifications_none_24"
                app:drawableTint="@color/black300" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="16dp"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/data_tv"
                style="@style/settings_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_and_storage_tv"
                app:drawableStartCompat="@drawable/data_saver_on_24"
                app:drawableTint="@color/black300" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider7"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="16dp"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/battery_tv"
                style="@style/settings_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/battary_server_tv"
                app:drawableStartCompat="@drawable/outline_battery_charging_full_24"
                app:drawableTint="@color/black300" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider8"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="16dp"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/folders_tv"
                style="@style/settings_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chat_folders_tv"
                app:drawableStartCompat="@drawable/folder_open_24"
                app:drawableTint="@color/black300" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider9"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="16dp"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/devices_tv"
                style="@style/settings_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Divices"
                app:drawableStartCompat="@drawable/devices_24"
                app:drawableTint="@color/black300" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider10"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="16dp"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/language_tv"
                style="@style/settings_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language_tv"
                app:drawableStartCompat="@drawable/language_24"
                app:drawableTint="@color/black300" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider11"
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:layout_marginVertical="16dp" />

            <TextView
                android:id="@+id/primium_tv"
                style="@style/settings_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Telegram Premium"
                app:drawableStartCompat="@drawable/star_24" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:layout_marginVertical="16dp" />

            <TextView
                android:id="@+id/help_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/help_tv"
                android:textColor="@color/blue"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/ask_tv"
                style="@style/settings_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ask_a_question_tv"
                app:drawableStartCompat="@drawable/sms_24"
                app:drawableTint="@color/black300" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="16dp"
                android:layout_marginStart="16dp" />

            <TextView
                style="@style/settings_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular_questions_tv"
                app:drawableStartCompat="@drawable/help_outline_24"
                app:drawableTint="@color/black300" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="16dp"
                android:layout_marginStart="16dp" />

            <TextView
                style="@style/settings_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy_tv"
                app:drawableStartCompat="@drawable/privacy_tip_24"
                app:drawableTint="@color/black300" />

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.motion.widget.MotionLayout>